remove padding-bottom from .footer ul

--- a/style.scss
+++ b/style.scss
@@ -47,6 +47,9 @@ p {
 .footer{
   background-color: #d0dbe1;
 }
+.footer ul {
+  margin-bottom: 0;
+}
 .social-media {
   list-style: none;
   display: flex;
