--- a/css/style.css
+++ b/css/style.css
@@ -62,6 +62,10 @@ p {
   background-color: #d0dbe1;
 }
 
+.footer ul {
+  margin-bottom: 0;
+}
+
 .social-media {
   list-style: none;
   display: -webkit-box;
