--- a/css/style.css
+++ b/css/style.css
@@ -88,5 +88,8 @@ p {
     font-size: 35px;
     font-weight: bold;
   }
+  .footer {
+    text-align: center;
+  }
 }
 /*# sourceMappingURL=style.css.map */
