--- a/css/style.css
+++ b/css/style.css
@@ -92,4 +92,10 @@ p {
     text-align: center;
   }
 }
+
+@media (min-width: 576px) and (max-width: 992px) {
+  a.list-group-item.list-group-item-action {
+    border-top-width: 1px;
+  }
+}
 /*# sourceMappingURL=style.css.map */
