--- a/style.scss
+++ b/style.scss
@@ -71,3 +71,8 @@ p {
     text-align: center;
   }
 }
+@media (min-width: 576px) and (max-width: 992px) {
+  a.list-group-item.list-group-item-action {
+    border-top-width: 1px;
+  }
+}
